libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__chained_field_access.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Chained field access
expression: foo.bar.baz
info:
  kind: Ok
---
Expr#4294967040@7
  ExprKind (Field)
    FieldExpr#4294967040@7 (field: baz)
      Expr#4294967040@6
        ExprKind (Field)
          FieldExpr#4294967040@6 (field: bar)
            Expr#4294967040@3
              ExprKind (Path)
                Path#4294967040@3 (rooted: false)
                  PathSegment#4294967040@2 (name: foo)
