libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__chained_index_access.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Chained index access
expression: "foo[0][1]"
info:
  kind: Ok
---
Expr#4294967040@7
  ExprKind (Index)
    IndexExpr#4294967040@7
      Expr#4294967040@6
        ExprKind (Index)
          IndexExpr#4294967040@6
            Expr#4294967040@3
              ExprKind (Path)
                Path#4294967040@3 (rooted: false)
                  PathSegment#4294967040@2 (name: foo)
            Expr#4294967040@4
              ExprKind (Literal)
                LiteralExpr#4294967040@4
                  LiteralKind (Integer)
                    IntegerLiteral (0)
      Expr#4294967040@5
        ExprKind (Literal)
          LiteralExpr#4294967040@5
            LiteralKind (Integer)
              IntegerLiteral (1)
