libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__empty_brackets.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Empty brackets
expression: "[]"
info:
  kind: Err
---
[]
 ^
