libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__generic_path.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Path with generic
expression: Vec<Int>
info:
  kind: Ok
---
Expr#4294967040@7
  ExprKind (Path)
    Path#4294967040@7 (rooted: false)
      PathSegment#4294967040@6 (name: Vec)
        GenericArgument#4294967040@5
          Type#4294967040@4
            TypeKind (Path)
              Path#4294967040@4 (rooted: false)
                PathSegment#4294967040@3 (name: Int)
