libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__expr__tests__generic_with_access.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/expr.rs
description: Generic path with index access
expression: "Vec<Int>[0]"
info:
  kind: Ok
---
Expr#4294967040@9
  ExprKind (Index)
    IndexExpr#4294967040@9
      Expr#4294967040@7
        ExprKind (Path)
          Path#4294967040@7 (rooted: false)
            PathSegment#4294967040@6 (name: Vec)
              GenericArgument#4294967040@5
                Type#4294967040@4
                  TypeKind (Path)
                    Path#4294967040@4 (rooted: false)
                      PathSegment#4294967040@3 (name: Int)
      Expr#4294967040@8
        ExprKind (Literal)
          LiteralExpr#4294967040@8
            LiteralKind (Integer)
              IntegerLiteral#4294967040@8 (0)
